# rust-axum

./: Cargo.toml  Dockerfile  README.md  compose.yml  fly.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: index.html  main.rs
