[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["tokio", "http1", "http2"], default-features = false }
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"