[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["tokio", "http1", "http2"], default-features = false }
tokio = {version = "1", features = ["full"]}
tokio-shutdown = { version = "0.1", default-features = false }
prometheus = { version = "0.13", default-features = false }
prometheus-static-metric = "0.5"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
